SUBDIRS =

if WITH_BUNDLED_RUBY_GLIB2_0_16_0
SUBDIRS += glib-0.16.0
endif

if WITH_BUNDLED_RUBY_GLIB2_0_90_8
SUBDIRS += glib-0.90.8
endif

if WITH_BUNDLED_RUBY_GLIB2_1_2_6
SUBDIRS += glib-1.2.6
endif

if WITH_BUNDLED_RUBY_GLIB2_LATEST
SUBDIRS += glib-2.0.2
endif

SUBDIRS +=					\
	ext					\
	lib					\
	ruby-milter				\
	test					\
	sample

EXTRA_DIST =					\
	$(test_unit_files)			\
	$(ruby_glib2_0_16_0_files)		\
	$(ruby_glib2_0_90_8_files)		\
	$(ruby_glib2_1_2_6_files)		\
	$(ruby_glib2_latest_files)

echo-abs-top-builddir:
	@echo $(abs_top_builddir)

# find test-unit -not -path '*/.git/*' -type f | sort | sed -e 's,^,\t,g'
test_unit_files =						\
	test-unit/.gitignore					\
	test-unit/.travis.yml					\
	test-unit/.yardopts					\
	test-unit/COPYING					\
	test-unit/GPL						\
	test-unit/Gemfile					\
	test-unit/LGPL						\
	test-unit/PSFL						\
	test-unit/README.textile				\
	test-unit/Rakefile					\
	test-unit/TODO						\
	test-unit/doc/html/bar.png				\
	test-unit/doc/html/bar.svg				\
	test-unit/doc/html/color-diff.png			\
	test-unit/doc/html/developer.png			\
	test-unit/doc/html/developer.svg			\
	test-unit/doc/html/famfamfam-logo.png			\
	test-unit/doc/html/favicon.ico				\
	test-unit/doc/html/favicon.png				\
	test-unit/doc/html/favicon.svg				\
	test-unit/doc/html/github-logo.png			\
	test-unit/doc/html/heading-mark.png			\
	test-unit/doc/html/heading-mark.svg			\
	test-unit/doc/html/index.html				\
	test-unit/doc/html/index.html.ja			\
	test-unit/doc/html/install.png				\
	test-unit/doc/html/install.svg				\
	test-unit/doc/html/jp.png				\
	test-unit/doc/html/kinotan-failure.png			\
	test-unit/doc/html/kinotan-pass.png			\
	test-unit/doc/html/logo.png				\
	test-unit/doc/html/logo.svg				\
	test-unit/doc/html/reference.png			\
	test-unit/doc/html/rubyforge.png			\
	test-unit/doc/html/tango-logo.png			\
	test-unit/doc/html/test-unit.css			\
	test-unit/doc/html/tutorial.png				\
	test-unit/doc/html/tutorial.svg				\
	test-unit/doc/html/us.png				\
	test-unit/doc/po/ja.po					\
	test-unit/doc/templates/footer.en.html.erb		\
	test-unit/doc/templates/footer.ja.html.erb		\
	test-unit/doc/templates/head.en.html.erb		\
	test-unit/doc/templates/head.ja.html.erb		\
	test-unit/doc/templates/header.en.html.erb		\
	test-unit/doc/templates/header.ja.html.erb		\
	test-unit/doc/text/how-to.textile			\
	test-unit/doc/text/news.textile				\
	test-unit/lib/test-unit.rb				\
	test-unit/lib/test/unit.rb				\
	test-unit/lib/test/unit/assertionfailederror.rb		\
	test-unit/lib/test/unit/assertions.rb			\
	test-unit/lib/test/unit/attribute-matcher.rb		\
	test-unit/lib/test/unit/attribute.rb			\
	test-unit/lib/test/unit/autorunner.rb			\
	test-unit/lib/test/unit/code-snippet-fetcher.rb		\
	test-unit/lib/test/unit/collector.rb			\
	test-unit/lib/test/unit/collector/descendant.rb		\
	test-unit/lib/test/unit/collector/dir.rb		\
	test-unit/lib/test/unit/collector/load.rb		\
	test-unit/lib/test/unit/collector/objectspace.rb	\
	test-unit/lib/test/unit/collector/xml.rb		\
	test-unit/lib/test/unit/color-scheme.rb			\
	test-unit/lib/test/unit/color.rb			\
	test-unit/lib/test/unit/data.rb				\
	test-unit/lib/test/unit/diff.rb				\
	test-unit/lib/test/unit/error.rb			\
	test-unit/lib/test/unit/exceptionhandler.rb		\
	test-unit/lib/test/unit/failure.rb			\
	test-unit/lib/test/unit/fault-location-detector.rb	\
	test-unit/lib/test/unit/fixture.rb			\
	test-unit/lib/test/unit/notification.rb			\
	test-unit/lib/test/unit/omission.rb			\
	test-unit/lib/test/unit/pending.rb			\
	test-unit/lib/test/unit/priority.rb			\
	test-unit/lib/test/unit/runner/console.rb		\
	test-unit/lib/test/unit/runner/emacs.rb			\
	test-unit/lib/test/unit/runner/xml.rb			\
	test-unit/lib/test/unit/testcase.rb			\
	test-unit/lib/test/unit/testresult.rb			\
	test-unit/lib/test/unit/testsuite.rb			\
	test-unit/lib/test/unit/testsuitecreator.rb		\
	test-unit/lib/test/unit/ui/console/outputlevel.rb	\
	test-unit/lib/test/unit/ui/console/testrunner.rb	\
	test-unit/lib/test/unit/ui/emacs/testrunner.rb		\
	test-unit/lib/test/unit/ui/testrunner.rb		\
	test-unit/lib/test/unit/ui/testrunnermediator.rb	\
	test-unit/lib/test/unit/ui/testrunnerutilities.rb	\
	test-unit/lib/test/unit/ui/xml/testrunner.rb		\
	test-unit/lib/test/unit/util/backtracefilter.rb		\
	test-unit/lib/test/unit/util/method-owner-finder.rb	\
	test-unit/lib/test/unit/util/observable.rb		\
	test-unit/lib/test/unit/util/output.rb			\
	test-unit/lib/test/unit/util/procwrapper.rb		\
	test-unit/lib/test/unit/version.rb			\
	test-unit/sample/adder.rb				\
	test-unit/sample/subtracter.rb				\
	test-unit/sample/test_adder.rb				\
	test-unit/sample/test_subtracter.rb			\
	test-unit/sample/test_user.rb				\
	test-unit/test-unit.gemspec				\
	test-unit/test/collector/test-descendant.rb		\
	test-unit/test/collector/test-load.rb			\
	test-unit/test/collector/test_dir.rb			\
	test-unit/test/collector/test_objectspace.rb		\
	test-unit/test/fixtures/header-label.csv		\
	test-unit/test/fixtures/header-label.tsv		\
	test-unit/test/fixtures/header.csv			\
	test-unit/test/fixtures/header.tsv			\
	test-unit/test/fixtures/no-header.csv			\
	test-unit/test/fixtures/no-header.tsv			\
	test-unit/test/fixtures/plus.csv			\
	test-unit/test/run-test.rb				\
	test-unit/test/test-assertions.rb			\
	test-unit/test/test-attribute-matcher.rb		\
	test-unit/test/test-attribute.rb			\
	test-unit/test/test-code-snippet.rb			\
	test-unit/test/test-color-scheme.rb			\
	test-unit/test/test-color.rb				\
	test-unit/test/test-data.rb				\
	test-unit/test/test-diff.rb				\
	test-unit/test/test-emacs-runner.rb			\
	test-unit/test/test-fault-location-detector.rb		\
	test-unit/test/test-fixture.rb				\
	test-unit/test/test-notification.rb			\
	test-unit/test/test-omission.rb				\
	test-unit/test/test-pending.rb				\
	test-unit/test/test-priority.rb				\
	test-unit/test/test-testcase.rb				\
	test-unit/test/test_error.rb				\
	test-unit/test/test_failure.rb				\
	test-unit/test/test_testresult.rb			\
	test-unit/test/test_testsuite.rb			\
	test-unit/test/testunit-test-util.rb			\
	test-unit/test/ui/test_testrunmediator.rb		\
	test-unit/test/util/test-method-owner-finder.rb		\
	test-unit/test/util/test-output.rb			\
	test-unit/test/util/test_backtracefilter.rb		\
	test-unit/test/util/test_observable.rb			\
	test-unit/test/util/test_procwrapper.rb

# find glib-0.16.0 -not -path '*/.svn/*' -type f | sort
ruby_glib2_0_16_0_files =			\
	glib-0.16.0/COPYING.LIB			\
	glib-0.16.0/ChangeLog			\
	glib-0.16.0/README			\
	glib-0.16.0/extconf.rb			\
	glib-0.16.0/sample/bookmarkfile.rb	\
	glib-0.16.0/sample/completion.rb	\
	glib-0.16.0/sample/idle.rb		\
	glib-0.16.0/sample/iochannel.rb		\
	glib-0.16.0/sample/keyfile.rb		\
	glib-0.16.0/sample/shell.rb		\
	glib-0.16.0/sample/spawn.rb		\
	glib-0.16.0/sample/timeout.rb		\
	glib-0.16.0/sample/timeout2.rb		\
	glib-0.16.0/sample/timer.rb		\
	glib-0.16.0/sample/type-register.rb	\
	glib-0.16.0/sample/type-register2.rb	\
	glib-0.16.0/sample/utils.rb		\
	glib-0.16.0/src/depend			\
	glib-0.16.0/src/glib2.def		\
	glib-0.16.0/src/global.h		\
	glib-0.16.0/src/lib/glib-mkenums.rb	\
	glib-0.16.0/src/lib/glib2.rb		\
	glib-0.16.0/src/lib/mkmf-gnome2.rb	\
	glib-0.16.0/src/lib/pkg-config.rb	\
	glib-0.16.0/src/rbglib.c		\
	glib-0.16.0/src/rbglib.h		\
	glib-0.16.0/src/rbglib_bookmarkfile.c	\
	glib-0.16.0/src/rbglib_completion.c	\
	glib-0.16.0/src/rbglib_convert.c	\
	glib-0.16.0/src/rbglib_error.c		\
	glib-0.16.0/src/rbglib_fileutils.c	\
	glib-0.16.0/src/rbglib_i18n.c		\
	glib-0.16.0/src/rbglib_iochannel.c	\
	glib-0.16.0/src/rbglib_keyfile.c	\
	glib-0.16.0/src/rbglib_maincontext.c	\
	glib-0.16.0/src/rbglib_mainloop.c	\
	glib-0.16.0/src/rbglib_messages.c	\
	glib-0.16.0/src/rbglib_pollfd.c		\
	glib-0.16.0/src/rbglib_shell.c		\
	glib-0.16.0/src/rbglib_source.c		\
	glib-0.16.0/src/rbglib_spawn.c		\
	glib-0.16.0/src/rbglib_threads.c	\
	glib-0.16.0/src/rbglib_timer.c		\
	glib-0.16.0/src/rbglib_unicode.c	\
	glib-0.16.0/src/rbglib_utils.c		\
	glib-0.16.0/src/rbglib_win32.c		\
	glib-0.16.0/src/rbgobj_boxed.c		\
	glib-0.16.0/src/rbgobj_closure.c	\
	glib-0.16.0/src/rbgobj_enums.c		\
	glib-0.16.0/src/rbgobj_fundamental.c	\
	glib-0.16.0/src/rbgobj_object.c		\
	glib-0.16.0/src/rbgobj_param.c		\
	glib-0.16.0/src/rbgobj_paramspecs.c	\
	glib-0.16.0/src/rbgobj_signal.c		\
	glib-0.16.0/src/rbgobj_strv.c		\
	glib-0.16.0/src/rbgobj_type.c		\
	glib-0.16.0/src/rbgobj_typeinstance.c	\
	glib-0.16.0/src/rbgobj_typeinterface.c	\
	glib-0.16.0/src/rbgobj_typemodule.c	\
	glib-0.16.0/src/rbgobj_typeplugin.c	\
	glib-0.16.0/src/rbgobj_value.c		\
	glib-0.16.0/src/rbgobj_valuearray.c	\
	glib-0.16.0/src/rbgobj_valuetypes.c	\
	glib-0.16.0/src/rbgobject.c		\
	glib-0.16.0/src/rbgobject.h		\
	glib-0.16.0/src/rbgutil.c		\
	glib-0.16.0/src/rbgutil.h		\
	glib-0.16.0/src/utils_int64.c		\
	glib-0.16.0/tests/runner.rb		\
	glib-0.16.0/tests/test_glib2.rb		\
	glib-0.16.0/tests/test_iochannel.rb	\
	glib-0.16.0/tests/test_unicode.rb

# find glib-0.90.8 -not -path '*/.svn/*' -type f | sort
ruby_glib2_0_90_8_files =						\
	glib-0.90.8/COPYING.LIB						\
	glib-0.90.8/ChangeLog						\
	glib-0.90.8/README						\
	glib-0.90.8/Rakefile						\
	glib-0.90.8/TODO						\
	glib-0.90.8/ext/glib2/depend					\
	glib-0.90.8/ext/glib2/extconf.rb				\
	glib-0.90.8/ext/glib2/glib2.def					\
	glib-0.90.8/ext/glib2/rbgcompat.h				\
	glib-0.90.8/ext/glib2/rbglib.c					\
	glib-0.90.8/ext/glib2/rbglib.h					\
	glib-0.90.8/ext/glib2/rbglib_bookmarkfile.c			\
	glib-0.90.8/ext/glib2/rbglib_completion.c			\
	glib-0.90.8/ext/glib2/rbglib_convert.c				\
	glib-0.90.8/ext/glib2/rbglib_error.c				\
	glib-0.90.8/ext/glib2/rbglib_fileutils.c			\
	glib-0.90.8/ext/glib2/rbglib_i18n.c				\
	glib-0.90.8/ext/glib2/rbglib_int64.c				\
	glib-0.90.8/ext/glib2/rbglib_iochannel.c			\
	glib-0.90.8/ext/glib2/rbglib_keyfile.c				\
	glib-0.90.8/ext/glib2/rbglib_maincontext.c			\
	glib-0.90.8/ext/glib2/rbglib_mainloop.c				\
	glib-0.90.8/ext/glib2/rbglib_messages.c				\
	glib-0.90.8/ext/glib2/rbglib_pollfd.c				\
	glib-0.90.8/ext/glib2/rbglib_shell.c				\
	glib-0.90.8/ext/glib2/rbglib_source.c				\
	glib-0.90.8/ext/glib2/rbglib_spawn.c				\
	glib-0.90.8/ext/glib2/rbglib_threads.c				\
	glib-0.90.8/ext/glib2/rbglib_timer.c				\
	glib-0.90.8/ext/glib2/rbglib_unicode.c				\
	glib-0.90.8/ext/glib2/rbglib_utils.c				\
	glib-0.90.8/ext/glib2/rbglib_win32.c				\
	glib-0.90.8/ext/glib2/rbgobj_boxed.c				\
	glib-0.90.8/ext/glib2/rbgobj_closure.c				\
	glib-0.90.8/ext/glib2/rbgobj_convert.c				\
	glib-0.90.8/ext/glib2/rbgobj_enums.c				\
	glib-0.90.8/ext/glib2/rbgobj_fundamental.c			\
	glib-0.90.8/ext/glib2/rbgobj_object.c				\
	glib-0.90.8/ext/glib2/rbgobj_param.c				\
	glib-0.90.8/ext/glib2/rbgobj_paramspecs.c			\
	glib-0.90.8/ext/glib2/rbgobj_signal.c				\
	glib-0.90.8/ext/glib2/rbgobj_strv.c				\
	glib-0.90.8/ext/glib2/rbgobj_type.c				\
	glib-0.90.8/ext/glib2/rbgobj_typeinstance.c			\
	glib-0.90.8/ext/glib2/rbgobj_typeinterface.c			\
	glib-0.90.8/ext/glib2/rbgobj_typemodule.c			\
	glib-0.90.8/ext/glib2/rbgobj_typeplugin.c			\
	glib-0.90.8/ext/glib2/rbgobj_value.c				\
	glib-0.90.8/ext/glib2/rbgobj_valuearray.c			\
	glib-0.90.8/ext/glib2/rbgobj_valuetypes.c			\
	glib-0.90.8/ext/glib2/rbgobject.c				\
	glib-0.90.8/ext/glib2/rbgobject.h				\
	glib-0.90.8/ext/glib2/rbgprivate.h				\
	glib-0.90.8/ext/glib2/rbgutil.c					\
	glib-0.90.8/ext/glib2/rbgutil.h					\
	glib-0.90.8/ext/glib2/rbgutil_callback.c			\
	glib-0.90.8/extconf.rb						\
	glib-0.90.8/lib/glib-mkenums.rb					\
	glib-0.90.8/lib/glib2.rb					\
	glib-0.90.8/lib/gnome2-raketask.rb				\
	glib-0.90.8/lib/gnome2-win32-binary-downloader.rb		\
	glib-0.90.8/lib/mkmf-gnome2.rb					\
	glib-0.90.8/lib/pkg-config.rb					\
	glib-0.90.8/sample/bookmarkfile.rb				\
	glib-0.90.8/sample/completion.rb				\
	glib-0.90.8/sample/idle.rb					\
	glib-0.90.8/sample/iochannel.rb					\
	glib-0.90.8/sample/keyfile.rb					\
	glib-0.90.8/sample/shell.rb					\
	glib-0.90.8/sample/spawn.rb					\
	glib-0.90.8/sample/timeout.rb					\
	glib-0.90.8/sample/timeout2.rb					\
	glib-0.90.8/sample/timer.rb					\
	glib-0.90.8/sample/type-register.rb				\
	glib-0.90.8/sample/type-register2.rb				\
	glib-0.90.8/sample/utils.rb					\
	glib-0.90.8/test-unit/COPYING					\
	glib-0.90.8/test-unit/GPL					\
	glib-0.90.8/test-unit/History.txt				\
	glib-0.90.8/test-unit/Manifest.txt				\
	glib-0.90.8/test-unit/PSFL					\
	glib-0.90.8/test-unit/README.txt				\
	glib-0.90.8/test-unit/Rakefile					\
	glib-0.90.8/test-unit/TODO					\
	glib-0.90.8/test-unit/bin/testrb				\
	glib-0.90.8/test-unit/html/bar.png				\
	glib-0.90.8/test-unit/html/bar.svg				\
	glib-0.90.8/test-unit/html/developer.png			\
	glib-0.90.8/test-unit/html/developer.svg			\
	glib-0.90.8/test-unit/html/famfamfam-logo.png			\
	glib-0.90.8/test-unit/html/favicon.ico				\
	glib-0.90.8/test-unit/html/favicon.png				\
	glib-0.90.8/test-unit/html/favicon.svg				\
	glib-0.90.8/test-unit/html/heading-mark.png			\
	glib-0.90.8/test-unit/html/heading-mark.svg			\
	glib-0.90.8/test-unit/html/index.html				\
	glib-0.90.8/test-unit/html/index.html.ja			\
	glib-0.90.8/test-unit/html/install.png				\
	glib-0.90.8/test-unit/html/install.svg				\
	glib-0.90.8/test-unit/html/jp.png				\
	glib-0.90.8/test-unit/html/kinotan-failure.png			\
	glib-0.90.8/test-unit/html/kinotan-pass.png			\
	glib-0.90.8/test-unit/html/logo.png				\
	glib-0.90.8/test-unit/html/logo.svg				\
	glib-0.90.8/test-unit/html/reference.png			\
	glib-0.90.8/test-unit/html/rubyforge.png			\
	glib-0.90.8/test-unit/html/tango-logo.png			\
	glib-0.90.8/test-unit/html/test-unit.css			\
	glib-0.90.8/test-unit/html/tutorial.png				\
	glib-0.90.8/test-unit/html/tutorial.svg				\
	glib-0.90.8/test-unit/html/us.png				\
	glib-0.90.8/test-unit/images/color-diff.png			\
	glib-0.90.8/test-unit/lib/test/unit.rb				\
	glib-0.90.8/test-unit/lib/test/unit/assertionfailederror.rb	\
	glib-0.90.8/test-unit/lib/test/unit/assertions.rb		\
	glib-0.90.8/test-unit/lib/test/unit/attribute.rb		\
	glib-0.90.8/test-unit/lib/test/unit/autorunner.rb		\
	glib-0.90.8/test-unit/lib/test/unit/collector.rb		\
	glib-0.90.8/test-unit/lib/test/unit/collector/descendant.rb	\
	glib-0.90.8/test-unit/lib/test/unit/collector/dir.rb		\
	glib-0.90.8/test-unit/lib/test/unit/collector/load.rb		\
	glib-0.90.8/test-unit/lib/test/unit/collector/objectspace.rb	\
	glib-0.90.8/test-unit/lib/test/unit/collector/xml.rb		\
	glib-0.90.8/test-unit/lib/test/unit/color-scheme.rb		\
	glib-0.90.8/test-unit/lib/test/unit/color.rb			\
	glib-0.90.8/test-unit/lib/test/unit/diff.rb			\
	glib-0.90.8/test-unit/lib/test/unit/error.rb			\
	glib-0.90.8/test-unit/lib/test/unit/exceptionhandler.rb		\
	glib-0.90.8/test-unit/lib/test/unit/failure.rb			\
	glib-0.90.8/test-unit/lib/test/unit/fixture.rb			\
	glib-0.90.8/test-unit/lib/test/unit/notification.rb		\
	glib-0.90.8/test-unit/lib/test/unit/omission.rb			\
	glib-0.90.8/test-unit/lib/test/unit/pending.rb			\
	glib-0.90.8/test-unit/lib/test/unit/priority.rb			\
	glib-0.90.8/test-unit/lib/test/unit/runner/console.rb		\
	glib-0.90.8/test-unit/lib/test/unit/runner/emacs.rb		\
	glib-0.90.8/test-unit/lib/test/unit/runner/tap.rb		\
	glib-0.90.8/test-unit/lib/test/unit/runner/xml.rb		\
	glib-0.90.8/test-unit/lib/test/unit/testcase.rb			\
	glib-0.90.8/test-unit/lib/test/unit/testresult.rb		\
	glib-0.90.8/test-unit/lib/test/unit/testsuite.rb		\
	glib-0.90.8/test-unit/lib/test/unit/ui/console/outputlevel.rb	\
	glib-0.90.8/test-unit/lib/test/unit/ui/console/testrunner.rb	\
	glib-0.90.8/test-unit/lib/test/unit/ui/emacs/testrunner.rb	\
	glib-0.90.8/test-unit/lib/test/unit/ui/tap/testrunner.rb	\
	glib-0.90.8/test-unit/lib/test/unit/ui/testrunner.rb		\
	glib-0.90.8/test-unit/lib/test/unit/ui/testrunnermediator.rb	\
	glib-0.90.8/test-unit/lib/test/unit/ui/testrunnerutilities.rb	\
	glib-0.90.8/test-unit/lib/test/unit/ui/xml/testrunner.rb	\
	glib-0.90.8/test-unit/lib/test/unit/util/backtracefilter.rb	\
	glib-0.90.8/test-unit/lib/test/unit/util/method-owner-finder.rb	\
	glib-0.90.8/test-unit/lib/test/unit/util/observable.rb		\
	glib-0.90.8/test-unit/lib/test/unit/util/output.rb		\
	glib-0.90.8/test-unit/lib/test/unit/util/procwrapper.rb		\
	glib-0.90.8/test-unit/lib/test/unit/version.rb			\
	glib-0.90.8/test-unit/sample/adder.rb				\
	glib-0.90.8/test-unit/sample/subtracter.rb			\
	glib-0.90.8/test-unit/sample/test_adder.rb			\
	glib-0.90.8/test-unit/sample/test_subtracter.rb			\
	glib-0.90.8/test-unit/sample/test_user.rb			\
	glib-0.90.8/test-unit/test/collector/test-descendant.rb		\
	glib-0.90.8/test-unit/test/collector/test-load.rb		\
	glib-0.90.8/test-unit/test/collector/test_dir.rb		\
	glib-0.90.8/test-unit/test/collector/test_objectspace.rb	\
	glib-0.90.8/test-unit/test/run-test.rb				\
	glib-0.90.8/test-unit/test/test-assertions.rb			\
	glib-0.90.8/test-unit/test/test-attribute.rb			\
	glib-0.90.8/test-unit/test/test-color-scheme.rb			\
	glib-0.90.8/test-unit/test/test-color.rb			\
	glib-0.90.8/test-unit/test/test-diff.rb				\
	glib-0.90.8/test-unit/test/test-emacs-runner.rb			\
	glib-0.90.8/test-unit/test/test-fixture.rb			\
	glib-0.90.8/test-unit/test/test-notification.rb			\
	glib-0.90.8/test-unit/test/test-omission.rb			\
	glib-0.90.8/test-unit/test/test-pending.rb			\
	glib-0.90.8/test-unit/test/test-priority.rb			\
	glib-0.90.8/test-unit/test/test-testcase.rb			\
	glib-0.90.8/test-unit/test/test_error.rb			\
	glib-0.90.8/test-unit/test/test_failure.rb			\
	glib-0.90.8/test-unit/test/test_testresult.rb			\
	glib-0.90.8/test-unit/test/test_testsuite.rb			\
	glib-0.90.8/test-unit/test/testunit-test-util.rb		\
	glib-0.90.8/test-unit/test/ui/test_tap.rb			\
	glib-0.90.8/test-unit/test/ui/test_testrunmediator.rb		\
	glib-0.90.8/test-unit/test/util/test-method-owner-finder.rb	\
	glib-0.90.8/test-unit/test/util/test-output.rb			\
	glib-0.90.8/test-unit/test/util/test_backtracefilter.rb		\
	glib-0.90.8/test-unit/test/util/test_observable.rb		\
	glib-0.90.8/test-unit/test/util/test_procwrapper.rb		\
	glib-0.90.8/test/glib-test-init.rb				\
	glib-0.90.8/test/glib-test-utils.rb				\
	glib-0.90.8/test/run-test.rb					\
	glib-0.90.8/test/test_enum.rb					\
	glib-0.90.8/test/test_file_utils.rb				\
	glib-0.90.8/test/test_glib2.rb					\
	glib-0.90.8/test/test_iochannel.rb				\
	glib-0.90.8/test/test_key_file.rb				\
	glib-0.90.8/test/test_mkenums.rb				\
	glib-0.90.8/test/test_signal.rb					\
	glib-0.90.8/test/test_timeout.rb				\
	glib-0.90.8/test/test_unicode.rb				\
	glib-0.90.8/test/test_utils.rb					\
	glib-0.90.8/test/test_win32.rb

# find glib-1.2.6 -type f | sort
ruby_glib2_1_2_6_files =						\
	glib-1.2.6/COPYING.LIB						\
	glib-1.2.6/README						\
	glib-1.2.6/Rakefile						\
	glib-1.2.6/TODO							\
	glib-1.2.6/ext/glib2/depend					\
	glib-1.2.6/ext/glib2/extconf.rb					\
	glib-1.2.6/ext/glib2/glib2.def					\
	glib-1.2.6/ext/glib2/rbgcompat.h				\
	glib-1.2.6/ext/glib2/rbglib.c					\
	glib-1.2.6/ext/glib2/rbglib.h					\
	glib-1.2.6/ext/glib2/rbglib2conversions.h			\
	glib-1.2.6/ext/glib2/rbglib_bookmarkfile.c			\
	glib-1.2.6/ext/glib2/rbglib_convert.c				\
	glib-1.2.6/ext/glib2/rbglib_error.c				\
	glib-1.2.6/ext/glib2/rbglib_fileutils.c				\
	glib-1.2.6/ext/glib2/rbglib_i18n.c				\
	glib-1.2.6/ext/glib2/rbglib_int64.c				\
	glib-1.2.6/ext/glib2/rbglib_io_constants.c			\
	glib-1.2.6/ext/glib2/rbglib_iochannel.c				\
	glib-1.2.6/ext/glib2/rbglib_iochannel_win32_socket.c		\
	glib-1.2.6/ext/glib2/rbglib_iochannelerror.c			\
	glib-1.2.6/ext/glib2/rbglib_keyfile.c				\
	glib-1.2.6/ext/glib2/rbglib_maincontext.c			\
	glib-1.2.6/ext/glib2/rbglib_mainloop.c				\
	glib-1.2.6/ext/glib2/rbglib_messages.c				\
	glib-1.2.6/ext/glib2/rbglib_pollfd.c				\
	glib-1.2.6/ext/glib2/rbglib_shell.c				\
	glib-1.2.6/ext/glib2/rbglib_shellerror.c			\
	glib-1.2.6/ext/glib2/rbglib_source.c				\
	glib-1.2.6/ext/glib2/rbglib_spawn.c				\
	glib-1.2.6/ext/glib2/rbglib_spawnerror.c			\
	glib-1.2.6/ext/glib2/rbglib_threads.c				\
	glib-1.2.6/ext/glib2/rbglib_timer.c				\
	glib-1.2.6/ext/glib2/rbglib_ucs4.c				\
	glib-1.2.6/ext/glib2/rbglib_unichar.c				\
	glib-1.2.6/ext/glib2/rbglib_unicode.c				\
	glib-1.2.6/ext/glib2/rbglib_utf16.c				\
	glib-1.2.6/ext/glib2/rbglib_utf8.c				\
	glib-1.2.6/ext/glib2/rbglib_utils.c				\
	glib-1.2.6/ext/glib2/rbglib_win32.c				\
	glib-1.2.6/ext/glib2/rbglibdeprecated.c				\
	glib-1.2.6/ext/glib2/rbglibdeprecated.h				\
	glib-1.2.6/ext/glib2/rbgobj_boxed.c				\
	glib-1.2.6/ext/glib2/rbgobj_closure.c				\
	glib-1.2.6/ext/glib2/rbgobj_convert.c				\
	glib-1.2.6/ext/glib2/rbgobj_enumflags.c				\
	glib-1.2.6/ext/glib2/rbgobj_enums.c				\
	glib-1.2.6/ext/glib2/rbgobj_flags.c				\
	glib-1.2.6/ext/glib2/rbgobj_object.c				\
	glib-1.2.6/ext/glib2/rbgobj_param.c				\
	glib-1.2.6/ext/glib2/rbgobj_paramspecs.c			\
	glib-1.2.6/ext/glib2/rbgobj_signal.c				\
	glib-1.2.6/ext/glib2/rbgobj_strv.c				\
	glib-1.2.6/ext/glib2/rbgobj_type.c				\
	glib-1.2.6/ext/glib2/rbgobj_typeinstance.c			\
	glib-1.2.6/ext/glib2/rbgobj_typeinterface.c			\
	glib-1.2.6/ext/glib2/rbgobj_typemodule.c			\
	glib-1.2.6/ext/glib2/rbgobj_typeplugin.c			\
	glib-1.2.6/ext/glib2/rbgobj_value.c				\
	glib-1.2.6/ext/glib2/rbgobj_valuearray.c			\
	glib-1.2.6/ext/glib2/rbgobj_valuetypes.c			\
	glib-1.2.6/ext/glib2/rbgobject.c				\
	glib-1.2.6/ext/glib2/rbgobject.h				\
	glib-1.2.6/ext/glib2/rbgprivate.h				\
	glib-1.2.6/ext/glib2/rbgutil.c					\
	glib-1.2.6/ext/glib2/rbgutil.h					\
	glib-1.2.6/ext/glib2/rbgutil_callback.c				\
	glib-1.2.6/ext/glib2/rbgutil_list.c				\
	glib-1.2.6/ext/glib2/rbgutil_list.h				\
	glib-1.2.6/ext/glib2/rbgutildeprecated.c			\
	glib-1.2.6/ext/glib2/rbgutildeprecated.h			\
	glib-1.2.6/extconf.rb						\
	glib-1.2.6/lib/glib-mkenums.rb					\
	glib-1.2.6/lib/glib2.rb						\
	glib-1.2.6/lib/glib2/deprecatable.rb				\
	glib-1.2.6/lib/gnome2-raketask.rb				\
	glib-1.2.6/lib/gnome2-win32-binary-build-task.rb		\
	glib-1.2.6/lib/gnome2-win32-binary-download-task.rb		\
	glib-1.2.6/lib/mkmf-gnome2.rb					\
	glib-1.2.6/lib/pkg-config.rb					\
	glib-1.2.6/patches/glib-networking-2.28.7-fix-with-gnome-proxy.diff \
	glib-1.2.6/patches/glib-networking-2.28.7-support-gnutls-2.4.2.diff \
	glib-1.2.6/sample/bookmarkfile.rb				\
	glib-1.2.6/sample/idle.rb					\
	glib-1.2.6/sample/iochannel.rb					\
	glib-1.2.6/sample/keyfile.rb					\
	glib-1.2.6/sample/shell.rb					\
	glib-1.2.6/sample/spawn.rb					\
	glib-1.2.6/sample/timeout.rb					\
	glib-1.2.6/sample/timeout2.rb					\
	glib-1.2.6/sample/timer.rb					\
	glib-1.2.6/sample/type-register.rb				\
	glib-1.2.6/sample/type-register2.rb				\
	glib-1.2.6/sample/utils.rb					\
	glib-1.2.6/test/glib-test-init.rb				\
	glib-1.2.6/test/glib-test-utils.rb				\
	glib-1.2.6/test/run-test.rb					\
	glib-1.2.6/test/test_enum.rb					\
	glib-1.2.6/test/test_file_utils.rb				\
	glib-1.2.6/test/test_flags.rb					\
	glib-1.2.6/test/test_glib2.rb					\
	glib-1.2.6/test/test_iochannel.rb				\
	glib-1.2.6/test/test_key_file.rb				\
	glib-1.2.6/test/test_mkenums.rb					\
	glib-1.2.6/test/test_poll_fd.rb					\
	glib-1.2.6/test/test_signal.rb					\
	glib-1.2.6/test/test_source.rb					\
	glib-1.2.6/test/test_spawn.rb					\
	glib-1.2.6/test/test_timeout.rb					\
	glib-1.2.6/test/test_unicode.rb					\
	glib-1.2.6/test/test_utils.rb					\
	glib-1.2.6/test/test_value.rb					\
	glib-1.2.6/test/test_win32.rb

# find glib-2.0.2 -type f | sort
ruby_glib2_latest_files =						\
	glib-2.0.2/COPYING.LIB						\
	glib-2.0.2/Makefile						\
	glib-2.0.2/Makefile.lib						\
	glib-2.0.2/README						\
	glib-2.0.2/Rakefile						\
	glib-2.0.2/TODO							\
	glib-2.0.2/ext/glib2/Makefile					\
	glib-2.0.2/ext/glib2/depend					\
	glib-2.0.2/ext/glib2/extconf.rb					\
	glib-2.0.2/ext/glib2/glib-enum-types.c				\
	glib-2.0.2/ext/glib2/glib-enum-types.h				\
	glib-2.0.2/ext/glib2/glib2.def					\
	glib-2.0.2/ext/glib2/rbgcompat.h				\
	glib-2.0.2/ext/glib2/rbglib.c					\
	glib-2.0.2/ext/glib2/rbglib.h					\
	glib-2.0.2/ext/glib2/rbglib2conversions.h			\
	glib-2.0.2/ext/glib2/rbglib_bookmarkfile.c			\
	glib-2.0.2/ext/glib2/rbglib_convert.c				\
	glib-2.0.2/ext/glib2/rbglib_error.c				\
	glib-2.0.2/ext/glib2/rbglib_fileutils.c				\
	glib-2.0.2/ext/glib2/rbglib_i18n.c				\
	glib-2.0.2/ext/glib2/rbglib_int64.c				\
	glib-2.0.2/ext/glib2/rbglib_io_constants.c			\
	glib-2.0.2/ext/glib2/rbglib_iochannel.c				\
	glib-2.0.2/ext/glib2/rbglib_iochannel_win32_socket.c		\
	glib-2.0.2/ext/glib2/rbglib_iochannelerror.c			\
	glib-2.0.2/ext/glib2/rbglib_keyfile.c				\
	glib-2.0.2/ext/glib2/rbglib_maincontext.c			\
	glib-2.0.2/ext/glib2/rbglib_mainloop.c				\
	glib-2.0.2/ext/glib2/rbglib_messages.c				\
	glib-2.0.2/ext/glib2/rbglib_pollfd.c				\
	glib-2.0.2/ext/glib2/rbglib_shell.c				\
	glib-2.0.2/ext/glib2/rbglib_shellerror.c			\
	glib-2.0.2/ext/glib2/rbglib_source.c				\
	glib-2.0.2/ext/glib2/rbglib_spawn.c				\
	glib-2.0.2/ext/glib2/rbglib_spawnerror.c			\
	glib-2.0.2/ext/glib2/rbglib_threads.c				\
	glib-2.0.2/ext/glib2/rbglib_timer.c				\
	glib-2.0.2/ext/glib2/rbglib_ucs4.c				\
	glib-2.0.2/ext/glib2/rbglib_unichar.c				\
	glib-2.0.2/ext/glib2/rbglib_unicode.c				\
	glib-2.0.2/ext/glib2/rbglib_utf16.c				\
	glib-2.0.2/ext/glib2/rbglib_utf8.c				\
	glib-2.0.2/ext/glib2/rbglib_utils.c				\
	glib-2.0.2/ext/glib2/rbglib_win32.c				\
	glib-2.0.2/ext/glib2/rbglibdeprecated.c				\
	glib-2.0.2/ext/glib2/rbglibdeprecated.h				\
	glib-2.0.2/ext/glib2/rbgobj_boxed.c				\
	glib-2.0.2/ext/glib2/rbgobj_closure.c				\
	glib-2.0.2/ext/glib2/rbgobj_convert.c				\
	glib-2.0.2/ext/glib2/rbgobj_enumflags.c				\
	glib-2.0.2/ext/glib2/rbgobj_enums.c				\
	glib-2.0.2/ext/glib2/rbgobj_flags.c				\
	glib-2.0.2/ext/glib2/rbgobj_object.c				\
	glib-2.0.2/ext/glib2/rbgobj_param.c				\
	glib-2.0.2/ext/glib2/rbgobj_paramspecs.c			\
	glib-2.0.2/ext/glib2/rbgobj_signal.c				\
	glib-2.0.2/ext/glib2/rbgobj_strv.c				\
	glib-2.0.2/ext/glib2/rbgobj_type.c				\
	glib-2.0.2/ext/glib2/rbgobj_typeinstance.c			\
	glib-2.0.2/ext/glib2/rbgobj_typeinterface.c			\
	glib-2.0.2/ext/glib2/rbgobj_typemodule.c			\
	glib-2.0.2/ext/glib2/rbgobj_typeplugin.c			\
	glib-2.0.2/ext/glib2/rbgobj_value.c				\
	glib-2.0.2/ext/glib2/rbgobj_valuearray.c			\
	glib-2.0.2/ext/glib2/rbgobj_valuetypes.c			\
	glib-2.0.2/ext/glib2/rbgobject.c				\
	glib-2.0.2/ext/glib2/rbgobject.h				\
	glib-2.0.2/ext/glib2/rbgprivate.h				\
	glib-2.0.2/ext/glib2/rbgutil.c					\
	glib-2.0.2/ext/glib2/rbgutil.h					\
	glib-2.0.2/ext/glib2/rbgutil_callback.c				\
	glib-2.0.2/ext/glib2/rbgutil_list.c				\
	glib-2.0.2/ext/glib2/rbgutil_list.h				\
	glib-2.0.2/ext/glib2/rbgutildeprecated.c			\
	glib-2.0.2/ext/glib2/rbgutildeprecated.h			\
	glib-2.0.2/ext/glib2/ruby-glib2.pc				\
	glib-2.0.2/extconf.rb						\
	glib-2.0.2/lib/glib-mkenums.rb					\
	glib-2.0.2/lib/glib2.rb						\
	glib-2.0.2/lib/glib2/deprecatable.rb				\
	glib-2.0.2/lib/gnome2-raketask.rb				\
	glib-2.0.2/lib/gnome2/rake/external-package.rb			\
	glib-2.0.2/lib/gnome2/rake/native-binary-build-task.rb		\
	glib-2.0.2/lib/gnome2/rake/package-task.rb			\
	glib-2.0.2/lib/gnome2/rake/package.rb				\
	glib-2.0.2/lib/gnome2/rake/source-download-task.rb		\
	glib-2.0.2/lib/gnome2/rake/win32-binary-build-task.rb		\
	glib-2.0.2/lib/gnome2/rake/win32-binary-download-task.rb	\
	glib-2.0.2/lib/mkmf-gnome2.rb					\
	glib-2.0.2/lib/pkg-config.rb					\
	glib-2.0.2/sample/bookmarkfile.rb				\
	glib-2.0.2/sample/idle.rb					\
	glib-2.0.2/sample/iochannel.rb					\
	glib-2.0.2/sample/keyfile.rb					\
	glib-2.0.2/sample/shell.rb					\
	glib-2.0.2/sample/spawn.rb					\
	glib-2.0.2/sample/timeout.rb					\
	glib-2.0.2/sample/timeout2.rb					\
	glib-2.0.2/sample/timer.rb					\
	glib-2.0.2/sample/type-register.rb				\
	glib-2.0.2/sample/type-register2.rb				\
	glib-2.0.2/sample/utils.rb					\
	glib-2.0.2/test/glib-test-init.rb				\
	glib-2.0.2/test/glib-test-utils.rb				\
	glib-2.0.2/test/run-test.rb					\
	glib-2.0.2/test/test_enum.rb					\
	glib-2.0.2/test/test_file_utils.rb				\
	glib-2.0.2/test/test_flags.rb					\
	glib-2.0.2/test/test_glib2.rb					\
	glib-2.0.2/test/test_iochannel.rb				\
	glib-2.0.2/test/test_key_file.rb				\
	glib-2.0.2/test/test_mkenums.rb					\
	glib-2.0.2/test/test_poll_fd.rb					\
	glib-2.0.2/test/test_signal.rb					\
	glib-2.0.2/test/test_source.rb					\
	glib-2.0.2/test/test_spawn.rb					\
	glib-2.0.2/test/test_timeout.rb					\
	glib-2.0.2/test/test_unicode.rb					\
	glib-2.0.2/test/test_utils.rb					\
	glib-2.0.2/test/test_value.rb					\
	glib-2.0.2/test/test_win32.rb
